Add attribution for current navigation system

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Current navigation heavily influenced by/derived from
+     https://thinkshout.com/blog/2014/12/creating-dynamic-menus-in-jekyll/ -->
+
 <!-- Set shared metadata and import shared dependencies -->
 <head>
     <meta charset="UTF-8">
