--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,6 @@
+<!-- Include the "?" to trick the broswer-cache into behaving properly. -->
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+
 {% include header.html %}
 
 <div class="container container-left">
