Move all 'code' to an _assets directory

--- a/_assets/includes/header.html
+++ b/_assets/includes/header.html
@@ -14,7 +14,7 @@
     <!-- See https://www.bootstrapcdn.com/ -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="{{ site.baseurl }}/css/theme.css" rel="stylesheet" type="text/css">
+    <style type="text/css">{% include theme.css %}</style>
 </head>
 
 <body>
@@ -36,6 +36,19 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                   {% for node in site.pages %}
+                    {% assign node_url_parts = node.url | split: '/' %}
+                    {% assign node_url_parts_size = node_url_parts | size %}
+                    {% if node_url_parts_size == 2 %}
+                      {% if page.url contains node.url %}
+                          {% assign class_type = "current" %}
+                      {% else %}
+                          {% assign class_type = "active" %}
+                      {% endif %}
+                      <li class={{ class_type }}><a href="{{ node.url }}">{{node.title}}</a></li>
+                    {% endif %}
+                  {% endfor %}
+                  {% for node in site.collections %}
+                      <li class={{ class_type }}><a href="{{ site.baseurl }}/{{ node.label }}">{{ node.label }}</a></li>
                     {% assign node_url_parts = node.url | split: '/' %}
                     {% assign node_url_parts_size = node_url_parts | size %}
                     {% if node_url_parts_size == 2 %}
