--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
 <!-- Will automatically include all top-level directories and files in _pages -->
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar navbar-inverse navbar-fixed-top navbar-static-top" role="navigation">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                   <span class="sr-only">Toggle navigation</span>
