Functional scrollspy (MVP)

--- a/_includes/theme.css
+++ b/_includes/theme.css
@@ -1,6 +1,22 @@
+/* https://stackoverflow.com/questions/9288482/how-do-i-set-the-offset-for-scrollspy-in-bootstrap/12606867#12606867*/
+/* Make room for the nav bar */
 body {
     padding-top: 60px;
     padding-bottom: 60px;
+    position: relative;
+    height: 100%;
+}
+
+/* Make room for the nav bar when navigating to sections */
+h1[id], h2[id], h3[id], h4[id], h5[id], h6[id], dt[id] {
+    padding-top: 60px;
+    margin-top: -60px;
+}
+
+.row {
+    position: relative;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 .copyright {
@@ -13,24 +29,6 @@ body {
 
 .footer a {
     color: #ee4444;
-}
-
-.sidebar h1 {
-    color: #ee4444;
-    font-size: 1.3em;
-}
-
-.sidebar a {
-    color: #428bca;
-}
-
-.sidebar li {
-    margin-top: .7em;
-    line-height: 1em;
-}
-
-.sidebar a:hover {
-    color: #3071a9;
 }
 
 .container-left {
@@ -48,4 +46,65 @@ body {
 
 .author a {
     color: #ee4444;
+}
+
+/* sidebar */
+.bs-docs-sidebar {
+    padding-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+/* all links */
+.bs-docs-sidebar .nav>li>a {
+    color: #999;
+    border-left: 2px solid transparent;
+    padding: 4px 20px;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+/* nested links */
+.bs-docs-sidebar .nav .nav>li>a {
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 30px;
+    font-size: 12px;
+}
+
+/* active & hover links */
+.bs-docs-sidebar .nav>.active>a,
+.bs-docs-sidebar .nav>li>a:hover,
+.bs-docs-sidebar .nav>li>a:focus {
+    color: #563d7c;
+    text-decoration: none;
+    background-color: transparent;
+    border-left-color: #563d7c;
+}
+
+/* all active links */
+.bs-docs-sidebar .nav>.active>a,
+.bs-docs-sidebar .nav>.active:hover>a,
+.bs-docs-sidebar .nav>.active:focus>a {
+    font-weight: 700;
+}
+/* nested active links */
+.bs-docs-sidebar .nav .nav>.active>a,
+.bs-docs-sidebar .nav .nav>.active:hover>a,
+.bs-docs-sidebar .nav .nav>.active:focus>a {
+    font-weight: 500;
+}
+
+/* hide all (inactive) nested list */
+.bs-docs-sidebar .nav ul.nav {
+    display: none;
+}
+
+/* show active nested list */
+.bs-docs-sidebar .nav>.active>ul.nav {
+    display: block;
+}
+
+.fixed {
+    position: fixed;
 }
