--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,6 +47,14 @@
                       <li class={{ class_type }}><a href="{{ node.url }}">{{ node.title }}</a></li>
                     {% endif %}
                   {% endfor %}
+                  {% for landing_page in site.landing_pages %}
+                      {% if page.url contains landing_page.url %}
+                          {% assign class_type = "current" %}
+                      {% else %}
+                          {% assign class_type = "active" %}
+                      {% endif %}
+                      <li class={{ class_type }}><a href="{{ landing_page.url }}">{{ landing_page.title }}</a></li>
+                  {% endfor %}
                 </ul>
               </div>
         </div>
