--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Current navigation heavily influenced by/derived from
-     https://thinkshout.com/blog/2014/12/creating-dynamic-menus-in-jekyll/ -->
-
 <!-- Set shared metadata and import shared dependencies -->
 <head>
     <meta charset="UTF-8">
@@ -20,12 +17,12 @@
 <body>
 
 <!-- Primary Navigation Bar -->
-<!-- Will automatically include all top-level directories and files in _pages -->
+<!-- Will automatically include all top-level directories and files in _landing_pages -->
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="navbar navbar-inverse navbar-fixed-top navbar-static-top" role="navigation">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                   <span class="sr-only">Toggle navigation</span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -41,7 +38,9 @@
                       {% else %}
                           {% assign class_type = "active" %}
                       {% endif %}
-                      <li class={{ class_type }}><a href="{{ landing_page.url }}">{{ landing_page.title }}</a></li>
+                      <li class={{ class_type }}>
+                         <a href="{{ landing_page.url }}">{{ landing_page.title }}</a>
+                      </li>
                   {% endfor %}
                 </ul>
               </div>
