MVP for photo gallery/improved landing page

--- a/_assets/_includes/theme.css
+++ b/_assets/_includes/theme.css
@@ -116,3 +116,10 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id], dt[id] {
 .fixed {
     position: fixed;
 }
+
+.center-block {
+    display: block;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+}
