--- a/_assets/_layouts/default.html
+++ b/_assets/_layouts/default.html
@@ -1,5 +1,5 @@
 <!-- Include the "?" to trick the broswer-cache into behaving properly. -->
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+<link rel="shortcut icon" type="image/x-icon" href="https://drive.google.com/file/d/0B0Jfms0twG8EdndLVjdvTG0wZWM">
 
 {% include header.html %}
 
