--- a/_assets/_layouts/default.html
+++ b/_assets/_layouts/default.html
@@ -15,7 +15,7 @@ $(document).ready(function() {
         <nav class="col-md-3 bs-docs-sidebar">
             <ul id="toc" class="nav nav-stacked fixed"></ul>
         </nav>
-        <div class="col-md-9">
+        <div class="col-md-9 text-justify">
             {{ content }}
         </div>
     </div>
