Test scrollspy remotely

--- a/_assets/_includes/header.html
+++ b/_assets/_includes/header.html
@@ -12,6 +12,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <style type="text/css">{% include theme.css %}</style>
+    <script type="text/javascript">//<![CDATA[
+window.onload=function(){
+$('body').scrollspy({
+    target: '.bs-docs-sidebar',
+    offset: 40
+});
+
+}//]]>
+
+</script>
 </head>
 
 <body>
