--- a/_assets/_layouts/default.html
+++ b/_assets/_layouts/default.html
@@ -11,7 +11,7 @@ $(document).ready(function() {
 </script>
 
 <div class="container container-left">
-    <div class="row" id="test" data-spy="scroll" data-target=".bs-docs-sidebar" data-offset="60">
+    <div class="row">
         <nav class="col-md-3 bs-docs-sidebar">
             <ul id="toc" class="nav nav-stacked fixed"></ul>
         </nav>
