Scrollspy working with body
The favicon before <html> was the issue

--- a/_assets/_includes/header.html
+++ b/_assets/_includes/header.html
@@ -12,19 +12,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <style type="text/css">{% include theme.css %}</style>
-    <script type="text/javascript">//<![CDATA[
-window.onload=function(){
-$('body').scrollspy({
-    target: '.bs-docs-sidebar',
-    offset: 40
-});
-
-}//]]>
-
-</script>
+    <!-- Include the "?" to trick the broswer-cache into behaving properly. -->
+<link rel="shortcut icon" type="image/x-icon" href="https://drive.google.com/file/d/0B0Jfms0twG8EdndLVjdvTG0wZWM">
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".bs-docs-sidebar" data-offset="60">
 
 <!-- Primary Navigation Bar -->
 <!-- Will automatically include all top-level directories and files in _landing_pages -->
