Cleanup header.html

--- a/_assets/_includes/header.html
+++ b/_assets/_includes/header.html
@@ -3,49 +3,56 @@
 
 <!-- Set shared metadata and import shared dependencies -->
 <head>
+    <!-- Required settings -->
     <meta charset="UTF-8">
     <title>{{ site.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- See https://developers.google.com/speed/libraries/?csw=1#jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
     <!-- See https://www.bootstrapcdn.com/ -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+
+    <!-- Custom styling -->
     <style type="text/css">{% include theme.css %}</style>
-    <!-- Include the "?" to trick the broswer-cache into behaving properly. -->
-<link rel="shortcut icon" type="image/x-icon" href="https://drive.google.com/file/d/0B0Jfms0twG8EdndLVjdvTG0wZWM">
+
+    <!-- Favicon! Include the "?" to trick the broswer-cache into behaving properly. -->
+    <link href="https://drive.google.com/file/d/0B0Jfms0twG8EdndLVjdvTG0wZWM" rel="shortcut icon" type="image/x-icon">
 </head>
 
-<body data-spy="scroll" data-target=".bs-docs-sidebar" data-offset="60">
+<body data-spy="scroll" data-target=".sidebar" data-offset="60">
 
 <!-- Primary Navigation Bar -->
-<!-- Will automatically include all top-level directories and files in _landing_pages -->
+<!-- Will automatically include all files in _landing_pages -->
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="navbar navbar-inverse navbar-fixed-top navbar-static-top" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top navbar-static-top">
             <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
+                <!-- Create the hamburger menu used on small screens. -->
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.name }}</a>
-              </div>
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                  {% for landing_page in site.landing_pages %}
-                      {% if page.url contains landing_page.url %}
-                          {% assign class_type = "current" %}
-                      {% else %}
-                          {% assign class_type = "active" %}
-                      {% endif %}
-                      <li class={{ class_type }}>
-                         <a href="{{ landing_page.url }}">{{ landing_page.title }}</a>
-                      </li>
-                  {% endfor %}
+                    {% for landing_page in site.landing_pages %}
+                        {% if page.url contains landing_page.url %}
+                            {% assign class_type = "current" %}
+                        {% else %}
+                            {% assign class_type = "active" %}
+                        {% endif %}
+                        <li class={{ class_type }}>
+                            <a href="{{ landing_page.url }}">{{ landing_page.title }}</a>
+                        </li>
+                    {% endfor %}
                 </ul>
-              </div>
-        </div>
+            </div>
+        </nav>
     </div>
 </div>
