--- a/_assets/_layouts/default.html
+++ b/_assets/_layouts/default.html
@@ -9,10 +9,10 @@ $(document).ready(function() {
 
 <div class="container container-left">
     <div class="row">
-        <nav class="col-md-3 bs-docs-sidebar">
+        <nav class="col-sm-3 hidden-xs sidebar">
             <ul id="toc" class="nav nav-stacked fixed"></ul>
         </nav>
-        <div class="col-md-9 text-justify">
+        <div class="col-sm-9 text-justify">
             {{ content }}
         </div>
     </div>
