--- a/_assets/_includes/theme.css
+++ b/_assets/_includes/theme.css
@@ -43,14 +43,14 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id], dt[id] {
 }
 
 /* sidebar */
-.bs-docs-sidebar {
+.sidebar {
     padding-left: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
 /* all links */
-.bs-docs-sidebar .nav>li>a {
+.sidebar .nav>li>a {
     color: #999;
     border-left: 2px solid transparent;
     padding: 4px 20px;
@@ -59,7 +59,7 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id], dt[id] {
 }
 
 /* nested links */
-.bs-docs-sidebar .nav .nav>li>a {
+.sidebar .nav .nav>li>a {
     padding-top: 1px;
     padding-bottom: 1px;
     padding-left: 30px;
@@ -67,7 +67,7 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id], dt[id] {
 }
 
 /* doubly-nested links */
-.bs-docs-sidebar .nav .nav .nav>li>a {
+.sidebar .nav .nav .nav>li>a {
     padding-top: 1px;
     padding-bottom: 1px;
     padding-left: 40px;
@@ -75,9 +75,9 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id], dt[id] {
 }
 
 /* active & hover links */
-.bs-docs-sidebar .nav>.active>a,
-.bs-docs-sidebar .nav>li>a:hover,
-.bs-docs-sidebar .nav>li>a:focus {
+.sidebar .nav>.active>a,
+.sidebar .nav>li>a:hover,
+.sidebar .nav>li>a:focus {
     color: #563d7c;
     text-decoration: none;
     background-color: transparent;
@@ -85,25 +85,25 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id], dt[id] {
 }
 
 /* all active links */
-.bs-docs-sidebar .nav>.active>a,
-.bs-docs-sidebar .nav>.active:hover>a,
-.bs-docs-sidebar .nav>.active:focus>a {
+.sidebar .nav>.active>a,
+.sidebar .nav>.active:hover>a,
+.sidebar .nav>.active:focus>a {
     font-weight: 700;
 }
 /* nested active links */
-.bs-docs-sidebar .nav .nav>.active>a,
-.bs-docs-sidebar .nav .nav>.active:hover>a,
-.bs-docs-sidebar .nav .nav>.active:focus>a {
+.sidebar .nav .nav>.active>a,
+.sidebar .nav .nav>.active:hover>a,
+.sidebar .nav .nav>.active:focus>a {
     font-weight: 500;
 }
 
 /* hide all (inactive) nested list */
-.bs-docs-sidebar .nav ul.nav {
+.sidebar .nav ul.nav {
     display: none;
 }
 
 /* show active nested list */
-.bs-docs-sidebar .nav>.active>ul.nav {
+.sidebar .nav>.active>ul.nav {
     display: block;
 }
 
