Extract toc htlm into separate include

--- a/_assets/_layouts/default.html
+++ b/_assets/_layouts/default.html
@@ -1,11 +1,5 @@
 {% include header.html %}
-
-<script type="text/javascript">{% include toc.js %}</script>
-<script type="text/javascript">
-$(document).ready(function() {
-    $('#toc').toc();
-});
-</script>
+{% include toc.html %}
 
 <div class="container container-left">
     <div class="row">
