Remove Jekyll comment from footer

--- a/_assets/_includes/footer.html
+++ b/_assets/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span12 footer navbar-inverse navbar-fixed-bottom">
-            <p class="copyright">&copy;{{ site.time | date: '%Y' }} {{ site.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a>.
+            <p class="copyright">&copy;{{ site.time | date: '%Y' }} {{ site.name }}</a>.
         </div>
     </div>
 </div>
