--- a/_assets/_includes/footer.html
+++ b/_assets/_includes/footer.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span12 footer navbar-inverse navbar-fixed-bottom">
-            <p class="copyright">&copy;{{ site.time | date: '%Y' }} {{ site.name }}</a>.
+            {% include mail.svg %}
+            {% include github.svg %}
+            {% include linkedin.svg %}
         </div>
     </div>
 </div>
