Cleanup about-me and footer

--- a/_assets/_includes/footer.html
+++ b/_assets/_includes/footer.html
@@ -1,14 +1,14 @@
-<div class="container-fluid">
-    <div class="row-fluid">
-        <div class="span12 footer navbar-inverse navbar-fixed-bottom">
-            {% include mail.svg %}
-            {% include github.svg %}
-            {% include linkedin.svg %}
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="col-xs-12 footer navbar-inverse navbar-fixed-bottom">
+                    {% include mail.svg %}
+                    {% include github.svg %}
+                    {% include linkedin.svg %}
+                </div>
+            </div>
         </div>
-    </div>
-</div>
 
-{% include analytics.html %}
+        {% include analytics.html %}
 
-</body>
+    </body>
 </html>
