--- a/_assets/_includes/theme.css
+++ b/_assets/_includes/theme.css
@@ -111,3 +111,22 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id], dt[id] {
 .icon:hover {
     fill: #fff;
 }
+
+img {
+    max-width: 100%;
+    object-fit: contain;
+}
+
+/* https://stackoverflow.com/questions/10264463/can-a-figcaption-be-restricted-to-the-width-of-a-responsively-sized-image/13363408#13363408 */
+figure {
+    display: table;
+    margin: auto;
+}
+
+figcaption {
+    display: table-caption;
+    caption-side: bottom;
+    padding: 0 5px 5px;
+    font-style: italic;
+    text-align: center;
+}
