--- a/_assets/_layouts/about_me.html
+++ b/_assets/_layouts/about_me.html
@@ -2,7 +2,7 @@
 
 <div class="container container-left">
     <div class="row">
-        <div class="col-xs-9 col-sm-offset-3 text-justify">
+        <div class="col-sm-12 col-sm-9 col-sm-offset-3 text-justify">
             {{ content }}
         </div>
     </div>
