Add support for Cloudinary and convert Machine Shop page

--- a/_assets/_includes/footer.html
+++ b/_assets/_includes/footer.html
@@ -10,5 +10,10 @@
 
         {% include analytics.html %}
 
+        <script type="text/javascript">
+            var cl = cloudinary.Cloudinary.new({cloud_name: "petetay"});
+            cl.responsive();
+        </script>
+
     </body>
 </html>
