--- a/_assets/_includes/header.html
+++ b/_assets/_includes/header.html
@@ -18,11 +18,19 @@
     <!-- Lazy load plugin -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
 
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.1.9/cloudinary-core-shrinkwrap.min.js"
+        type="text/javascript">
+    </script>
+
     <!-- Custom styling -->
     <style type="text/css">{% include theme.css %}</style>
 
     <!-- Favicon! Include the "?" to trick the broswer-cache into behaving properly. -->
     <link href="https://drive.google.com/file/d/0B0Jfms0twG8EdndLVjdvTG0wZWM" rel="shortcut icon" type="image/x-icon">
+
+    <!-- Enable client hints. -->
+    <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
 </head>
 
 <body data-spy="scroll" data-target=".sidebar" data-offset="60">
