Fetch favicon from Cloudinary instead of google drive to improve perf
Cuts page load time in half

--- a/_assets/_includes/header.html
+++ b/_assets/_includes/header.html
@@ -27,7 +27,9 @@
     <style type="text/css">{% include theme.css %}</style>
 
     <!-- Favicon! Include the "?" to trick the broswer-cache into behaving properly. -->
-    <link href="https://drive.google.com/file/d/0B0Jfms0twG8EdndLVjdvTG0wZWM" rel="shortcut icon" type="image/x-icon">
+    <link href="http://res.cloudinary.com/peterson/favicon.png"
+        rel="shortcut icon"
+        type="image/x-icon">
 
     <!-- Enable client hints. -->
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
