New and improved responsive projects page ordered by date

--- a/_assets/_layouts/projects.html
+++ b/_assets/_layouts/projects.html
@@ -1,5 +1,7 @@
 {% include header.html %}
 
+<style type="text/css">{% include projects.css %}</style>
+
 <div class="container">
     <div class="col-md-8 col-md-offset-2 text-center">
         {{ content }}
